package com.sda.patterns.structural.decorator.ex1;

public interface Text {

	String format(String string);

}
